# opengl-practice

./: .gitignore  CMakeCache.txt  CMakeLists.txt  OpenGL_tutorials.sln  conanfile.txt  profile.py
OpenGL_tutorials/: OpenGL_tutorials.vcxproj  OpenGL_tutorials.vcxproj.filters
OpenGL_tutorials/src/: main.cpp
OpenGL_tutorials/src/System/: Application.cpp  Application.hpp  Camera.hpp  FPSCamera.cpp  FPSCamera.hpp  Mesh.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  VertexPosTex.hpp
OpenGL_tutorials/src/scenes/: CoordinateSystemScene.cpp  CoordinateSystemScene.hpp  TexturedQuadScene.cpp  TexturedQuadScene.hpp  TexturedTriangleScene.cpp  TexturedTriangleScene.hpp  TransformationScene.cpp  TransformationScene.hpp  TriangleScene.cpp
OpenGL_tutorials/src/shaders/: multicolour.frag  multicolour.vert  textured.vert  textured_transform.vert
src/: main.cpp
src/Math/: Vector.hpp
src/System/: Application.cpp  Application.hpp  Camera.cpp  Mesh.hpp  Shader.cpp  Shader.hpp  ShaderManager.cpp  ShaderManager.hpp  VertexPosNormal.hpp  VertexPosTex.hpp  Windows_defuckery.h
src/object/: cube.cpp  cube.hpp  mesh.cpp  mesh.hpp  meshBase.hpp  texture.cpp  texture.hpp
src/object/mesh/: Impl.hpp
src/scenes/: CoordinateSystemScene.cpp  CoordinateSystemScene.hpp  TexturedQuadScene.cpp  TexturedQuadScene.hpp  TransformationScene.cpp  TransformationScene.hpp  TriangleScene.cpp  TriangleScene.hpp  lightingScene.cpp  lightingScene.hpp
src/shaders/: ambient_transform.frag  ambient_transform.vert  colour.frag  colour_transform.frag  colour_transform.vert  textured_coordsys.frag  textured_coordsys.vert  textured_transform.frag
